--- a/viz/index.html
+++ b/viz/index.html
@@ -70,7 +70,24 @@ d3.csv("bicycle-data.csv", function(data) {
 
       // Add a circle.
       marker.append("svg:circle")
-          .attr("r", 4.5)
+          .attr("r", function(d){
+            if (d.value.Level == "Possible Injury (C)"){
+              return "2";
+            }
+            else if (d.value.Level == "Fatalities"){
+              return "5";
+            }
+            else if (d.value.Level == "Property Damage Only"){
+              return "1";
+            }
+            else if (d.value.Level == "Non-Incap. Injury (B)"){
+              return "3";
+            }
+            else if (d.value.Level == "Incap. Injury (A)"){
+              return "4";
+            }
+          })
+          .attr("opacity", 0.6)
           .attr("cx", padding)
           .attr("cy", padding)
           .attr("fill", function(d){
