--- a/viz/agg-googleMaps.html
+++ b/viz/agg-googleMaps.html
@@ -32,6 +32,11 @@ html, body, #map {
     <div id="map"></div>
     <script type="text/javascript">
 
+      function projectPoint(x, y) {
+    var point = map.latLngToLayerPoint(new L.LatLng(y, x));
+    this.stream.point(point.x, point.y);
+  }
+
     d3.selection.prototype.moveToFront = function() {
   return this.each(function(){
     this.parentNode.appendChild(this);
@@ -47,6 +52,9 @@ var map = new google.maps.Map(d3.select("#map").node(), {
 
 
 d3.csv("bicycle-data-bad-removed.csv", function(data) {
+  
+  
+
   var nestData = d3.nest().key(function(d){ return d.lat + "," + d.long}).entries(data);
 
   for (var i = 0; i < nestData.length; i++) {
