--- a/viz/index.html
+++ b/viz/index.html
@@ -6,16 +6,74 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
      <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
      <script type="text/javascript" src="lib/q.js"></script>
+     <script type="text/javascript" src="lib/d3.tip.js"></script>
 
     <style type="text/css">
 
 #map {
   width: 960px;
   height: 500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 svg {
   position: relative;
+}
+
+.d3-tip {
+  line-height: 1;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+  pointer-events: none;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  pointer-events: none;
+}
+
+/* Northward tooltips */
+.d3-tip.n:after {
+  content: "\25BC";
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+  text-align: center;
+}
+
+/* Eastward tooltips */
+.d3-tip.e:after {
+  content: "\25C0";
+  margin: -4px 0 0 0;
+  top: 50%;
+  left: -8px;
+}
+
+/* Southward tooltips */
+.d3-tip.s:after {
+  content: "\25B2";
+  margin: 0 0 1px 0;
+  top: -8px;
+  left: 0;
+  text-align: center;
+}
+
+/* Westward tooltips */
+.d3-tip.w:after {
+  content: "\25B6";
+  margin: -4px 0 0 -1px;
+  top: 50%;
+  left: 100%;
 }
 
     </style>
@@ -36,11 +94,12 @@ svg {
     this.stream.point(point.x, point.y);
   }
 
-var map = L.map('map').setView([44.9763201, -93.2708829], 11);
+var map = L.map('map').setView([44.96, -93.27], 12);
 
 L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiZ2VsaWNpYSIsImEiOiJRLUZOV2Z3In0.XYdXJ73QuT8Frxsn1BJ5MA', {
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
     maxZoom: 18,
+    minZoom: 11,
     id: 'gelicia.mifl322k',
     accessToken: 'pk.eyJ1IjoiZ2VsaWNpYSIsImEiOiJRLUZOV2Z3In0.XYdXJ73QuT8Frxsn1BJ5MA'
 }).addTo(map);
@@ -53,8 +112,28 @@ var nestData;
 var transform = d3.geo.transform({point: projectPoint});
 
 loadData().then(function(){
-  var crashes = g.selectAll("circle").data(nestData).enter().append("circle");
-  
+    
+    var tip = d3.tip().attr('class', 'd3-tip').html(function(d) { 
+      var intersectString = "Intersection: <b>" + d.values[0]["Primary Road"] + " and " + d.values[0]["Intersecting Road"] + "</b>";
+      var  propDamageString = "Accidents w/ Property Damage Only: <b>" + d.intersectPropDamage + "</b>";
+      var  possInjuryString = "Accidents w/ Possible Injury: <b>" + d.intersectPossInjury + "</b>";
+      var  nonIncapInjuryString = "Accidents w/ Non-Incapacitated Injury: <b>" + d.intersectNonIncapInjury + "</b>";
+      var  incapInjuryString = "Accidents w/ Incapacitated Injury: <b>" + d.intersectIncapInjury + "</b>";
+      var  fatalityString = "Accidents w/ Fatality: <b>" + d.intersectFatality + "</b>";
+      var  totalScoreString = "Weighted Total Score: <b>" + d.intersectTotal + "</b>";
+
+      console.log(d); 
+
+      return intersectString + "<br/>" + propDamageString + "<br/>" + possInjuryString + "<br/>" 
+        + nonIncapInjuryString + "<br/>" + incapInjuryString + "<br/>" + fatalityString + "<br/>" 
+        + totalScoreString ; 
+    });
+    g.call(tip);
+
+  var crashes = g.selectAll("circle").data(nestData).enter().append("circle")
+  .on('mouseover', tip.show)
+  .on('mouseout', tip.hide);
+
   map.on("viewreset", function(){
     reset();
   });
@@ -93,23 +172,31 @@ loadData().then(function(){
     var topLeft = map.latLngToLayerPoint(new L.LatLng(top, left)); 
     var bottomRight = map.latLngToLayerPoint(new L.LatLng(bottom, right)); 
 
-      console.log(top, bottom, left, right);
-      console.log("topLeft", topLeft);
-      console.log("bottomRight", bottomRight);
+    svg.attr("width", bottomRight.x - topLeft.x)
+    .attr("height", bottomRight.y - topLeft.y)
+    .style("left", topLeft.x + "px")
+    .style("top", topLeft.y + "px");
 
-        svg.attr("width", bottomRight.x - topLeft.x)
-        .attr("height", bottomRight.y - topLeft.y)
-        .style("left", topLeft.x + "px")
-        .style("top", topLeft.y + "px");
+    g.attr("transform", "translate(" + -topLeft.x + "," + -topLeft.y + ")");
 
-      g.attr("transform", "translate(" + -topLeft.x + "," + -topLeft.y + ")");
-
-      crashes.attr({
+    crashes.attr({
       fill:"red",
       "stroke-width": 1,
       "stroke": "black",
       opacity: 0.5,
-      r: function (d) { return d.intersectTotal;},
+      r: function (d) {  
+        var zoomFactor = map.getZoom();
+        if(zoomFactor >= 16){
+          zoomFactor=1;
+        }
+        else if(zoomFactor <= 13){
+          zoomFactor=0.25;
+        }
+        else {
+          zoomFactor=0.5;
+        }
+
+        return d.intersectTotal*zoomFactor;},
        cx: function(d){
         var longLat = [d.values[0].long, d.values[0].lat];
         var point = map.latLngToLayerPoint(new L.LatLng(longLat[1], longLat[0]));
@@ -132,24 +219,41 @@ function loadData(){
 
     for (var i = 0; i < nestData.length; i++) {
       var intersectTotal = 0;
+      var intersectPropDamage = 0;
+      var intersectPossInjury = 0;
+      var intersectNonIncapInjury = 0;
+      var intersectIncapInjury = 0;
+      var intersectFatality = 0;
+
       for (var j = 0; j < nestData[i].values.length; j++) {
         if (nestData[i].values[j].Level == "Possible Injury (C)"){
+          intersectPossInjury++;
           intersectTotal+=2;
         }
         else if (nestData[i].values[j].Level == "Fatalities"){
+          intersectFatality++;
           intersectTotal+=5;
         }
         else if (nestData[i].values[j].Level == "Property Damage Only"){
+          intersectPropDamage++;
           intersectTotal+=1;
         }
         else if (nestData[i].values[j].Level == "Non-Incap. Injury (B)"){
+          intersectNonIncapInjury++;
           intersectTotal+=3;
         }
         else if (nestData[i].values[j].Level == "Incap. Injury (A)"){
+          intersectIncapInjury++;
           intersectTotal+=4;
         }
       }
-      nestData[i].intersectTotal = intersectTotal
+
+      nestData[i].intersectPropDamage = intersectPropDamage;
+      nestData[i].intersectPossInjury = intersectPossInjury;
+      nestData[i].intersectNonIncapInjury = intersectNonIncapInjury;
+      nestData[i].intersectIncapInjury = intersectIncapInjury;
+      nestData[i].intersectFatality = intersectFatality;
+      nestData[i].intersectTotal = intersectTotal;
     }
 
     var sortedNestData = nestData.sort(function(a,b){
@@ -163,10 +267,6 @@ function loadData(){
 
   return def.promise;
 }
-
-
-
-
     </script>
   </body>
 </html>
