disclaimer of missing data

--- a/viz/index.html
+++ b/viz/index.html
@@ -89,6 +89,7 @@
     </style>
   </head>
   <body>
+    <p>Bike data from <a href="https://github.com/anton612/bicycledata">here</a>, geocoded from Google. ~80 crashes were removed for non accurate geocoding, will be added back once it's manually done. Source is <a href="https://github.com/gelicia/bicycledata/blob/master/viz/index.html">here</a>. Questions or problems, contact <a href="mailto:kdurivage@gelicia.com">me</a>.</p>
     <div id="map"></div>
     <div >
       <table id="crashData">
